# Tanari-DP

Interfaz_Tesis/: partitions.csv
Interfaz_Tesis/libraries/: lv_conf.h
Interfaz_Tesis/libraries/TFT_eSPI/: User_Setup.h
Interfaz_Tesis/libraries/ui/src/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_comp.c  ui_comp.h  ui_comp_configurebutton.c  ui_comp_configurebutton.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_offbutton.c  ui_comp_offbutton.h  ui_comp_offbutton1.c  ui_comp_offbutton1.h  ui_configScreen.c  ui_configScreen.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h  ui_homeScreen.c  ui_homeScreen.h  ui_img_1571022687.c  ui_img_660791701.c  ui_img_acople_desconectado_png.c  ui_img_bateria_0_png.c  ui_img_bateria_100_png.c  ui_img_bateria_25_png.c  ui_img_bateria_50_png.c  ui_img_bateria_75_png.c  ui_img_bateria_cargando_png.c  ui_img_send_data_png.c  ui_img_welcomebg_320x480_original_11zon_png.c  ui_img_welcomebg_320x480_original_png.c  ui_monitoreoScreen.c  ui_monitoreoScreen.h  ui_splashScreen.c  ui_splashScreen.h
Interfaz_Tesis/ui/: ui.ino
